Upgrade to server v167

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,79 +1,86 @@
 {
-    "editor.formatOnSave": true,
-    "files.exclude": {
-        "**/.git": true,
-        "**/.svn": true,
-        "**/.hg": true,
-        "**/CVS": true,
-        "**/.DS_Store": true,
-        "node_modules": true,
-        "dist/**": true,
-        "pages/**": true
-    },
-    "cSpell.words": [
-      "ALGO",
-      "ARCA",
-      "CFDs",
-      "CFTC",
-      "CMDTY",
-      "CONID",
-      "CREDITMAN",
-      "CUSIP",
-      "CUSIPs",
-      "CUST",
-      "Cond",
-      "Dont",
-      "ENEXT",
-      "ETF's",
-      "ETFs",
-      "FGBL",
-      "Forex",
-      "GLOBEX",
-      "HEADTIMESTAMP",
-      "IB's",
-      "IBDARK",
-      "IBKR",
-      "IDEALPRO",
-      "ISIN",
-      "LIFFE",
-      "LOGLEVEL",
-      "Legin",
-      "MPID",
-      "Maint",
-      "Marginable",
-      "Mgmt",
-      "NBBO",
-      "OHLC",
-      "PASSV",
-      "PRIMARYEXCH",
-      "PTIA",
-      "Prio",
-      "RESC",
-      "Reuter's",
-      "SHORTABLE",
-      "SLONG",
-      "SSHORT",
-      "SSHORTX",
-      "STPL",
-      "SYNT",
-      "TRAILIMIT",
-      "TWAP",
-      "TWS's",
-      "Unreportable",
-      "VOLAT",
-      "VWAP",
-      "YYYYMMDD",
-      "heberallred",
-      "intraday",
-      "mifid",
-      "ourside",
-      "putable",
-      "sectype",
-      "stoqey",
-      "timespan",
-      "typedoc",
-      "volatilities",
-      "yyyymmss"
-    ],
-    "god.tsconfig": "./tsconfig.json",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true,
+    "source.fixAll.format": true,
+    "source.organizeImports": true,
+    "source.sortPackageJson": true
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "files.exclude": {
+      "**/.git": true,
+      "**/.svn": true,
+      "**/.hg": true,
+      "**/CVS": true,
+      "**/.DS_Store": true,
+      "node_modules": true,
+      "dist/**": true,
+      "pages/**": true
+  },
+  "cSpell.words": [
+    "ALGO",
+    "ARCA",
+    "CFDs",
+    "CFTC",
+    "CMDTY",
+    "CONID",
+    "CREDITMAN",
+    "CUSIP",
+    "CUSIPs",
+    "CUST",
+    "Cond",
+    "Dont",
+    "ENEXT",
+    "ETF's",
+    "ETFs",
+    "FGBL",
+    "Forex",
+    "GLOBEX",
+    "HEADTIMESTAMP",
+    "IB's",
+    "IBDARK",
+    "IBKR",
+    "IDEALPRO",
+    "ISIN",
+    "LIFFE",
+    "LOGLEVEL",
+    "Legin",
+    "MPID",
+    "Maint",
+    "Marginable",
+    "Mgmt",
+    "NBBO",
+    "OHLC",
+    "PASSV",
+    "PRIMARYEXCH",
+    "PTIA",
+    "Prio",
+    "RESC",
+    "Reuter's",
+    "SHORTABLE",
+    "SLONG",
+    "SSHORT",
+    "SSHORTX",
+    "STPL",
+    "SYNT",
+    "TRAILIMIT",
+    "TWAP",
+    "TWS's",
+    "Unreportable",
+    "VOLAT",
+    "VWAP",
+    "YYYYMMDD",
+    "heberallred",
+    "intraday",
+    "mifid",
+    "ourside",
+    "putable",
+    "sectype",
+    "stoqey",
+    "timespan",
+    "typedoc",
+    "volatilities",
+    "yyyymmss"
+  ],
+  "god.tsconfig": "./tsconfig.json",
 }
