--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     environment:
       NODE_ENV: development
     docker:
-      - image: circleci/node:18.17.1
+      - image: node:18.17.1
     working_directory: ~/repo
     steps:
       - restore_cache:
@@ -46,6 +46,7 @@ jobs:
             - node_modules
             - dist
           key: v2-dependencies-{{ checksum "package.json" }}
+
       - save_cache:
           key: source-v1-{{ .Branch }}-{{ .Revision }}
           paths:
@@ -65,7 +66,7 @@ jobs:
       - JAVA_PATH=/opt/i4j_jres/1.8.0_152/bin # JRE is bundled starting with TWS 952
       - APP=GATEWAY
     docker:
-      - image: circleci/node:18.17.1
+      - image: node:18.17.1
     working_directory: ~/repo
     steps:
       - restore_cache:
@@ -98,7 +99,7 @@ jobs:
       # CC_TEST_REPORTER_ID: <insert id>
       NODE_ENV: development
     docker:
-      - image: circleci/node:18.17.1
+      - image: node:18.17.1
       - image: industrialninja/ib_gateway:latest
         environment:
           - TZ=America/NewYork
