--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@stoqey/ib",
-  "version": "1.3.29",
+  "name": "@icocoding/ib-node-api",
+  "version": "1.0.1",
   "private": false,
   "description": "Interactive Brokers TWS/IB Gateway API client library for Node.js (TS)",
   "keywords": [
@@ -37,13 +37,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/stoqey/ib.git"
+    "url": "git://github.com/icocoding/ib-node-api.git"
   },
   "license": "MIT",
   "author": {
-    "name": "Ceddy Muhoza",
-    "email": "ceddymuhoza@gmail.com",
-    "url": "https://ceddy.org"
+    "name": "iCocoding",
+    "email": "",
+    "url": "http://blog.cocoding.org"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
