--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,8 +38,7 @@ jobs:
       # Publish the package
       - name: "Publishing to Npm registry"
         run: |
-          echo "${{ secrets.NPM_AUTH_TOKEN }}"
-          npm config set //registry.npmjs.com/:_authToken=${{ secrets.NPM_TOKEN }}
+          npm config set //registry.npmjs.com
           npm publish
         env:
           CI: true
