--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "license": "MIT",
   "author": {
-    "name": "iCocoding",
+    "name": "cocoding",
     "email": "",
     "url": "http://blog.cocoding.org"
   },
