--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "ib-node-api",
-  "version": "1.0.14",
+  "name": "@icocoding/ib-node-api",
+  "version": "1.0.14",,
+  "publishConfig": {
+    "access": "public"
+  }
   "private": false,
   "description": "Interactive Brokers TWS/IB Gateway API client library for Node.js (TS)",
   "keywords": [
