--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@icocoding/ib-node-api",
-  "version": "1.0.14",,
+  "version": "1.0.14",
   "publishConfig": {
     "access": "public"
   },
