--- a/package.json
+++ b/package.json
@@ -74,7 +74,6 @@
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
-    "@eslint/compat": "^1.2.4",
     "@smarttools/eslint-plugin-rxjs": "^1.0.9",
     "@types/jest": "^29.5.14",
     "@types/node": "^18.19.68",
@@ -82,6 +81,7 @@
     "ajv": "^8.17.1",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-formatter-junit": "^8.40.0",
     "eslint-plugin-jest": "^28.10.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
